css/style.css
/* importing fonts of google */

@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto+Slab:wght@500&family=Roboto:wght@500;900&display=swap');

/* a root code for using it again and again in code it contains color stuffs */

:root{
    --green: #16a085;
    --black: #444;
    --light-color: #777;
    --box-shadow: .5rem .5rem 0 rgba(22, 160, 133, .2);
    --text-shadow: .4rem .4rem 0 rgba(0, 0, 0, .2);
    --border: .2rem solid var(--green);
    --red: #e40909;
}

/* styling of html body starts */

*{
    font-family: 'Poppins', sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    outline: none;
    border: none;
    text-transform: capitalize;
    text-decoration: none;
    transition: all .2s ease-out;
}

html{
    font-size: 62.5%;
    overflow: scroll;
    scroll-padding: 7rem;
    scroll-behavior: smooth; 
}

section{
    padding: 2rem 9%;
}

section:nth-child(even){
    background: #f5f5f5;
}
  
/* Headings and buttons of website Css */

.heading{
    text-align: center;
    padding-bottom: 2rem;
    text-shadow: var(--text-shadow);
    text-transform: uppercase;
    color: var(--black);
    font-size: 5rem;
    letter-spacing: .4rem;
}

.heading span{
    text-transform: uppercase;
    color: var(--green);
}

.btn{
    display: inline-block;
    margin-top: 1rem;
    padding: .5rem;
    padding-left: 1rem;
    border: var(--border);
    border-radius: .5rem;
    box-shadow: var(--box-shadow);
    color: var(--green);
    cursor: pointer;
    font-size: 1.7rem;
    background: #fff;
}

.btn span{
    padding: .7rem 1rem;
    border-radius: .5rem;
    background: var(--green);
    color: #fff;
    margin-left: .5rem;
}

.btn:hover{
    background: var(--green);
    color: #fff;
}

.btn:hover span{
    color: var(--green);
    background: #fff;
    margin-left: 1rem;
}

/* css for navbar */

.header{
    padding: 2rem 9%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background: #fff;
}

.sticky{
    position: sticky;
    top:0; 
    left: 0; 
    right: 0;
    box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1); 
}

.header .logo{
    font-size: 2.5rem;
    color: var(--black);
}

.header .logo i{
    color: var(--red);
}

.header .navbar a{
   font-size: 1.7rem;
   color:var(--light-color);
   margin-left: 2rem; 
}

.header .navbar a:hover{
    color: var(--green);
}

#menu-btn{
    font-size: 2.5rem;
    border-radius: .5rem;
    background: #eee;
    color: var(--green);
    padding: 1rem 1.5rem;
    cursor: pointer;
    display: none;
}
 /* css for home section */
.home{
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    gap: 1.5rem;
    padding-top: 10rem;  
}

.home .image{
    flex: 1 1 45rem;
}

.home .image img{
    width: 100%;    
}

.home .content{
    flex: 1 1 45rem;
}

.home .content h3{
    font-size: 5.9rem;
    color: var(--black);
    line-height: 1.3;
    text-shadow: var(--text-shadow);
}

.home .content p{
    font-size: 1.7rem;
    color: var(--light-color);
    line-height: 1.8;
    padding: 1rem 0;
}

.icons-container{
    display: grid;
    gap: 2rem;
    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
    padding-top: 5rem;
    padding-bottom: 5rem;
}


.icons-container .icons{
    border: var(--border);
    box-shadow: var(--box-shadow);
    border-radius: .5rem;
    text-align: center;
    padding: 2.5rem;
    cursor: pointer;
}

.icons-container .icons:hover{
    box-shadow: 10px 10px 20px grey;
}
/* .icons-container .icons:hover{
    padding: 0.1px;
} */

.icons-container .icons i{
    font-size: 4.5rem;
    color: var(--green);
    padding-bottom: .7rem;
}

.icons-container .icons h3{
    font-size: 3.2rem;
    color: var(--black);
    padding: .5rem 0;
    text-shadow: var(--text-shadow);
}

.icons-container .icons p{
    font-size: 1.7rem;
    color: var(--light-color);
}

/* review css */

.review .box-container{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
    gap: 2rem;
}

.review .box-container .box{
    border: var(--border);
    box-shadow: var(--box-shadow);
    border-radius: .5rem;
    padding: 2.5rem;
    background: #fff;
    text-align: center;
    position: relative;
    overflow: hidden;
    z-index: 0;
}

.review .box-container .box img{
    height: 10rem;
    width: 10rem;
    border-radius: 50%;
    object-fit: cover;
    border: .5rem solid #fff;
}

.review .box-container .box h3{
    color: #fff;
    font-size: 2.2rem;
    padding: .5rem 0;
}

.review .box-container .box .stars i{
    color: #fff;
    font-size: 1.5rem;
}

.review .box-container .box .text{
    color: var(--light-color);
    line-height: 1.8;
    font-size: 1.6rem;
    padding-top: 4rem;
}

.review .box-container .box::before{
    content: "";
    position: absolute;
    top: -4rem;
    left: 50%;
    transform: translateX(-50%);
    background: var(--green);
    border-bottom-left-radius: 50%;
    border-bottom-right-radius: 50%;
    height: 25rem;
    width: 120%;
    z-index: -1;
}

/* footer css */

.footer .box-containers{
    display: grid;
    gap: 2rem;
    grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr)); 
}

.footer .box-containers .box h3{
    font-size: 2.5rem;
    color: var(--black);
    padding: 1rem 0;
}

.footer .box-containers .box a{
    display: block;
    font-size: 1.5rem;
    color: var(--light-color);
    padding: 1rem 0;
}

.footer .box-containers .box a i{
    padding-right: .5rem;
    color: var(--green);
}

.footer .box-containers .box a:hover i{
    padding-right: 2rem;
}

.footer .credit{
    padding: 1rem;
    padding-top: 2rem;
    margin-top: 2rem;
    text-align: center;
    font-size: 2rem;
    color: var(--light-color);
    border-top: .1rem solid black; 
}

.footer .credit span{
    color: var(--green);
}

/* media query css for other devicies */

@media (max-width:991px){
    html{
        font-size: 55%;
    }

    .header{
        padding: 2rem;
    }
}

@media (max-width:768px){
    #menu-btn{
        display: initial;
    }

    .header .navbar{
        position: absolute;
        top: 115%;
        right: 2rem;
        border-radius: .5rem;
        box-shadow:var(--box-shadow);
        width: 30rem;
        border: var(--border);
        background: #fff;
        transform: scale(0);
        opacity: 0;
        transform-origin: top right;
        transition: none;
    }

    .header .navbar.active{
        transform: scale(1);
        opacity: 1;
        transition: .2s ease-out; 
    }

    .header .navbar a{
        font-size: 2rem;
        display: block;
        margin: 2.5rem;
    }
}

@media (max-width:450px){
    html{
        font-size: 50%;
    }
}

